        ===== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) on 8/4/2006 =====

        ===== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) on 8/4/2006 =====

        ===== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) on 8/4/2006 =====

        ===== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) on 8/4/2006 =====

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======

2006-03-21  Brian Kahne  <bkahne@freescale.com>

	* Moved the website to Compass so that everyone can access it.

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.26 (v0_8_26) on Linux (cde-tx32-ldt189) ======

2006-03-17  Brian Kahne  <bkahne@freescale.com>

	* Fixed minor issues in order to port to gcc 4.1.  The problems
	were that the new compiler eliminated a lot of timing loops,
	making some regressions break when compiled with optimization.

        ====== plasma release 0.8.25 (v0_8_25) on Linux (cde-tx32-ldt189) ======

2006-03-17  Brian Kahne  <bkahne@freescale.com>

	* Various minor changes to port Plasma to gcc 4.1.

	* The garbage collector was upgraded to version 6.7.

        ====== plasma release 0.8.24 (v0_8_24) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.24 (v0_8_24) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.24 (v0_8_24) on Linux (cde-tx32-ldt189) ======

2006-03-07  Brian Kahne  <bkahne@freescale.com>

	* Fixed bugs in TypeInfo:

	  * Added ability to get encoding string.

	  * Fixed the nth-template-argument accessor function.

	* Fixed nested functions so that they work (I think).  This
	feature is now turned on by default.
